--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 name: "Roti Tawar Francisco",
                 description: "Teman setia setiap pagi",
                 price: 75000,
-                <p><img src="1356879.png" width="250" height="250"></p>,
+                image: "https://images.unsplash.com/photo-1587248720328-4daa08f11b9e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80",
                 category: "Makanan Ringan"
             },
             {
