--- a/index.html
+++ b/index.html
@@ -629,14 +629,11 @@
                     </ul>
                     <div class="social-links">
                         <a href="https://www.instagram.com/letscempaka.id/"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 <div class="google-form-container">
                     <h3>Kirim Pesan Melalui Google Forms</h3>
-                    <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeSomeExampleFormID/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
+                    <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1xKr0_VxD9zuY6fKOgzRLemwCSkpvs-DNMGCAlcZRBUE/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
                 </div>
             </div>
         </div>
@@ -676,15 +673,12 @@
                 <div class="footer-section">
                     <h3>Ikuti Kami</h3>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/letscempaka.id/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 PT Cempaka. All Rights Reserved.</p>
+                <p>&copy; 2000 PT Cempaka. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
