--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <i class="fas fa-leaf"></i>
+                <img src="transLogo Cempaka.png" width="75">
                 <span>PT Cempaka</span>
             </div>
             <ul class="nav-menu">
