--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             <h2 class="section-title">Tentang Kami</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Gudang PT Cempaka">
+                    <img src="https://images.pexels.com/photos/269077/pexels-photo-269077.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Gudang PT Cempaka">
                 </div>
                 <div class="about-text">
                     <h3>PT Cempaka - Distributor Bahan Makanan & Minuman</h3>
