--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 name: "Susu Kotak Fren",
                 description: "Kesegaran susu sapi murni langsung dari peternakan, diproses secara higienis untuk menjaga kemurnian rasa dan kandungan gizinya.",
                 price: 45000,
-                image: "https://cdns.klimg.com/merdeka.com/i/w/news/2021/03/19/1286628/content_images/670x335/20210319114629-2-resep-minuman-kreasi-susu-006-kurnia-azizah.jpg",
+                image: "https://cdn0-production-images-kly.akamaized.net/apDO_oKcBIAGWPzcqElr6jJ8BDw=/800x450/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/3197479/original/025781100_1596446264-2686539.jpg",
                 category: "Minuman dalam Kotak"
             },
             {
