--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             line-height: 1.6;
             color: var(--dark-color);
             background-color: #f9f9f9;
-            background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect fill="%23f5f5f5" width="100" height="100"/><path fill="%23e0e0e0" d="M0 0h50v50H0z"/></svg>');
+            background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url('data:image/svg+xml;utf8,<svg xmlns="https://smartpluspro.com/app/repository/upload/artikel-5-menu-recommendations-for-premium-cafe-business/5-Menu-Recommendations-for-Premium-Cafe-Business.jpg" width="100" height="100" viewBox="0 0 100 100"><rect fill="%23f5f5f5" width="100" height="100"/><path fill="%23e0e0e0" d="M0 0h50v50H0z"/></svg>');
             background-attachment: fixed;
             background-size: 300px;
         }
