--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             line-height: 1.6;
             color: var(--dark-color);
             background-color: #f9f9f9;
-            background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url('data:image/svg+xml;utf8,<svg xmlns="https://smartpluspro.com/app/repository/upload/artikel-5-menu-recommendations-for-premium-cafe-business/5-Menu-Recommendations-for-Premium-Cafe-Business.jpg" width="100" height="100" viewBox="0 0 100 100"><rect fill="%23f5f5f5" width="100" height="100"/><path fill="%23e0e0e0" d="M0 0h50v50H0z"/></svg>');
+            background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect fill="%23f5f5f5" width="100" height="100"/><path fill="%23e0e0e0" d="M0 0h50v50H0z"/></svg>');
             background-attachment: fixed;
             background-size: 300px;
         }
@@ -149,7 +149,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1498837167922-ddd27525d352?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://smartpluspro.com/app/repository/upload/artikel-5-menu-recommendations-for-premium-cafe-business/5-Menu-Recommendations-for-Premium-Cafe-Business.jpg');
             background-size: cover;
             background-position: center;
             color: white;
