--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://smartpluspro.com/app/repository/upload/artikel-5-menu-recommendations-for-premium-cafe-business/5-Menu-Recommendations-for-Premium-Cafe-Business.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1498837167922-ddd27525d352?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
             background-size: cover;
             background-position: center;
             color: white;
